ロード画面や会議画面の一部日本語化をしました

--- a/public/view/client.html
+++ b/public/view/client.html
@@ -66,10 +66,9 @@
         <!-- show this before to join -->
 
         <div id="loadingDiv">
-            <h1 class="pulsate">Loading...</h1>
+            <h1 class="pulsate">読み込み中...</h1>
             <pre>
-Please allow camera & microphone
-access to use this app.
+                マイクとカメラの権限を許可してください。
             </pre>
         </div>
 
