チャットとファイル共有ウィンドウの日本語化を行いました。

--- a/public/view/client.html
+++ b/public/view/client.html
@@ -127,7 +127,7 @@
                 <!-- End emoji picker -->
 
                 <div class="msger-inputarea">
-                    <input id="msgerInput" class="msger-input" type="text" placeholder="💬 Enter your message..." />
+                    <input id="msgerInput" class="msger-input" type="text" placeholder="💬 Enterでメッセージ送信..." />
                     <button id="msgerVideoUrlBtn" class="fab fa-youtube"></button>
                     <button id="msgerEmojiBtn" class="fas fa-smile"></button>
                     <button id="msgerSendBtn" class="fas fa-paper-plane"></button>
