ホワイトボードの日本語対応を行いました。

--- a/public/view/client.html
+++ b/public/view/client.html
@@ -274,9 +274,9 @@
         <header id="whiteboardHeader" class="whiteboard-header">
             <div id="whiteboardTitle" class="whiteboard-header-title"></div>
             <div class="whiteboard-header-options">
-                pencil
+                ペン
                 <input id="wbDrawingColorEl" class="whiteboardColorPicker" type="color" value="#FFFFFF" />
-                background
+                ボード
                 <input id="wbBackgroundColorEl" class="whiteboardColorPicker" type="color" value="#000000" />
                 <button id="whiteboardPencilBtn" class="fas fa-pencil-alt"></button>
                 <button id="whiteboardObjectBtn" class="fas fa-mouse-pointer"></button>
