ロード画面のレイアウトを変更しました

--- a/public/view/client.html
+++ b/public/view/client.html
@@ -249,11 +249,11 @@
                 <label for="mirotalkTheme">テーマカラー</label>
                 <br />
                 <select id="mirotalkTheme">
-                    <option value="neon">🟣 MiroTalk - neon</option>
-                    <option value="dark">⚫️ MiroTalk - dark</option>
-                    <option value="forest">🟢 MiroTalk - forest</option>
-                    <option value="sky">🔵 MiroTalk - sky</option>
-                    <option value="ghost">⚪️ MiroTalk - ghost</option>
+                    <option value="neon">🟣 neon</option>
+                    <option value="dark">⚫️ dark</option>
+                    <option value="forest">🟢 forest</option>
+                    <option value="sky">🔵 sky</option>
+                    <option value="ghost">⚪️ ghost</option>
                 </select>
                 <br /><br />
                 <label for="mirotalkBtnsBar">ボタンバーの配置</label>
