--- a/public/view/client.html
+++ b/public/view/client.html
@@ -62,7 +62,7 @@
 
     <!-- show this before to join -->
 
-    <div id="loadingDiv">
+    <div id="loadingDiv" style="color: #389B72;">
         <h1 class="pulsate">読み込み中...</h1>
         <pre>
                 マイクとカメラの権限を許可してください。
